ReadMe changes and border radius edits

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             height: 250px;
             background: url('assets/images/illustration-hero.svg');
             background-repeat: no-repeat;
+            border-top-right-radius: 15px;
+            border-top-left-radius: 15px;
         }
 
         .card .content
